fixed horizontal alignment of title text

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 }
 
 .header-primary-nav-left #logo {
-  padding: 8px 16px 0 24px;
+  padding: 8px 16px 0 16px;
   padding-top: 12px;
 }
 
